# canadafire

./: README.md  _canadafire.c  canadafire.c  canadafire.f  demo.py  eot.py  setup.cfg  setup.py
src/: canadafire.c  canadafire_w85.f
src/test/: 2018_bui_anom_wgt.txt  2018_dc_anom_wgt.txt  2018_dmc_anom_wgt.txt  2018_fm_anom_wgt.txt  2018_fwi_anom_wgt.txt  2018_isi_anom_wgt.txt  2018_precip_anom_wgt.txt  2018_rh_anom_wgt.txt  2018_tmp2m_anom_wgt.txt  2018_uv_wgt.txt  test_canadafire.py  xtest_all_chinook.py
test/: .gitignore  README.md  VanWagner1985SampleOfOutput.csv  canadafire.f  canadafire_2021.f  canadafire_w85.f  test_canadafire.py
