[metadata]
name = canadafire
version = 1.0.0
author = Elizabeth Fischer
author_email = eafischer2@alaska.edu
description = Compute Canada Fire Weather indices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlaskaFireWeather/canadafire
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
